--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="main">
       <div id="page">
        
-          <img src="./anime.jpeg" style="padding: 150px; border-radius: 50%;" alt="" />
+          <img src="portfolio/anime.jpeg" style="padding: 150px; border-radius: 50%;" alt="" />
         
         <div id="text">
           <h2>Hello</h2>
@@ -110,7 +110,7 @@
             </div>
             <div id="image">
               <a href="your_destination_link_here">
-                <img src="./calculator.png" alt="Description of the project" />
+                <img src="portfolio/calculator.png" alt="Description of the project" />
               </a>
             </div>
           </div>
@@ -120,7 +120,7 @@
             </div>
             <div id="image">
               <a href="your_destination_link_here">
-                <img src="./netflix.jpeg" alt="Description of the project" />
+                <img src="portfolio/netflix.jpeg" alt="Description of the project" />
               </a>
             </div>
           </div>
@@ -130,7 +130,7 @@
             </div>
             <div id="image">
               <a href="your_destination_link_here">
-                <img src="./food delivery.png" alt="Description of the project" />
+                <img src="portfolio/food delivery.png" alt="Description of the project" />
               </a>
             </div>
           </div>
@@ -152,20 +152,20 @@
           <br />
 
           <a class="btn" href="aishwarya.soni.n.p@gmail.com"
-            ><img src="./gmail.png" width="40px" height="40px"
+            ><img src="portfolio/gmail.png" width="40px" height="40px"
           /></a>
 
 
           <a class="btn" href="https://github.com/Aishwaryaabesec"
-            ><img src="./github.png" width="40px" height="40px"
+            ><img src="portfolio/github.png" width="40px" height="40px"
           /></a>
 
           <a class="btn" href="https://www.linkedin.com/in/soni-aishwarya"
-            ><img src="./linkdIn.png" width="40px" height="40px"
+            ><img src="portfolio/linkdIn.png" width="40px" height="40px"
           /></a>
 
           <a class="btn" href="https://www.instagram.com/aaesthetic_soul_/"
-            ><img src="./insta.jpeg" width="40px" height="40px"
+            ><img src="portfolio/insta.jpeg" width="40px" height="40px"
           /></a>
         </div>
 
