--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <h1>Calculator</h1>
             </div>
             <div id="image">
-              <a href="your_destination_link_here">
+              <a href="https://aishwaryaabesec.github.io/Calculator/">
                 <img src="Portfolio/calculator.png" alt="Description of the project" />
               </a>
             </div>
