--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <h1>Food Delivery App</h1>
             </div>
             <div id="image">
-              <a href="your_destination_link_here">
+              <a href="https://aishwaryaabesec.github.io/Fooddelivery/">
                 <img src="Portfolio/food delivery.png" alt="Description of the project" />
               </a>
             </div>
