--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
           </div>
           <div class="projects p2">
             <div id="text3">
-              <h1>Netflix Clone</h1>
+              <h1>Random Process Generator</h1>
             </div>
             <div id="image">
-              <a href="your_destination_link_here">
-                <img src="Portfolio/netflix.jpeg" alt="Description of the project" />
+              <a href="https://aishwaryaabesec.github.io/Random-Password-Generator/">
+                <img src="Portfolio/random password generator.png" alt="Description of the project" />
               </a>
             </div>
           </div>
