--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="projects p2">
             <div id="text3">
-              <h1>Random Process Generator</h1>
+              <h1>Random Password Generator</h1>
             </div>
             <div id="image">
               <a href="https://aishwaryaabesec.github.io/Random-Password-Generator/">
