--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div id="image">
               <a href="https://aishwaryaabesec.github.io/Random-Password-Generator/">
-                <img src="Portfolio/random password generator.png" alt="Description of the project" />
+                <img src="Portfolio/password.png" alt="Description of the project" />
               </a>
             </div>
           </div>
